tests/NormalTests/paczka2/big_fuzzy/63273953.err
Error in line 4: A995 A995 35,0
Error in line 1: Luf9XV S412 93,0
Error in line 16: R23kF6K S49 96,8
Error in line 13: emOALKKjH S412 43,0
Error in line 21: Qp1qjXQ S49 6,2
Error in line 25: emOALKKjH A995 64,1
Error in line 31: UL6p A144 60,6
Error in line 33: UL6p S412 43,2
Error in line 42: UL6p A144 16,0
Error in line 41: nNqY S49 58,2
Error in line 46: nNqY A144 71,8
Error in line 30: Qp1qjXQ A995 240,0
Error in line 64: emOALKKjH A144 40,6
Error in line 72: nNqY A144 55,4
Error in line 77: Luf9XV A144 51,8
Error in line 85: Luf9XV S49 27,3
Error in line 68: emOALKKjH A995 63,6
Error in line 96: emOALKKjH A144 94,2
Error in line 106: Luf9XV S49 53,6
Error in line 108: R23kF6K A995 81,9
Error in line 115: R23kF6K A144 75,9
Error in line 120: emOALKKjH S49 9,5
Error in line 122: emOALKKjH A995 30,8
Error in line 123: emOALKKjH S49 71,2
Error in line 126: R23kF6K A144 35,9
Error in line 124: A995 A144 2,9
Error in line 139: Qp1qjXQ A995 43,1
Error in line 149: Qp1qjXQ S412 $9,3
Error in line 143: Qp1qjXQ A144 30,0
Error in line 150: Qp1qjXQ S412 132,2
Error in line 159: A995 S412 33,5
Error in line 167: UL6p S49 190,2
Error in line 160: R23kF6K S412 25,9
Error in line 175: A995 S412 295,65
Error in line 174: A995 S412 64,1
Error in line 172: R23kF6K A144 11,4
Error in line 189: nNqY A144 99,4
Error in line 213: A995 S412 -2,4
Error in line 212: A995 S419 39,1
Error in line 214: A995 A995 31,9
Error in line 216: nNqY S49 64,6
Error in line 219: nNqY S412 35,8
Error in line 199: Luf9XV A144 164,1
Error in line 217: UL6p A995 98,1
Error in line 226: A995 A144 82,5
Error in line 225: UL6p S412 61,0
Error in line 234: UL6p A144 15,1
